--- a/public/index.react.html
+++ b/public/index.react.html
@@ -9,6 +9,10 @@
       <div id="root-react"></div>
     </fieldset>
 
+    <fieldset>
+      <legend>Vue</legend>
+      <div id="root-vue"></div>
+    </fieldset>
 
   </body>
   <script src="/bundle.react.js"></script>
